<resources>
    <string name="app_name">Getir Android</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="set_address">Pin your address</string>
    <string name="address_title">Title (Home etc.)</string>
    <string name="address">Address</string>
    <string name="building_number">Building No</string>
    <string name="apartment_no">Apartment No</string>
    <string name="address_txt">Address Description</string>
    <string name="save">Save</string>
    <string name="tl">TL</string>
    <string name="order_added">Your order is in taken</string>
    <string name="ok">ok</string>
    <string name="please_select_address">Please select an address for order</string>
    <string name="will_pay">Payment: </string>
    <string name="all_addresses">All Addresses</string>
    <string name="no_near_place">There is no food around you!</string>
    <string name="add_order">Add Order</string>
    <string name="addresses">Addresses</string>
    <string name="orders">Orders</string>
    <string name="already_member">Already member</string>
    <string name="enter_address">Enter address</string>
    <string name="daily_menu">Menu of the day:</string>
    <string name="add_new_address">Add New Address</string>
    <string name="address_added_successfully">Your Address is succesfully added!</string>
    <string name="enter">Enter</string>
    <string name="tutorial_page1">See hommade food cooks around</string>
    <string name="tutorial_page2">We will get your order and bring it to you</string>
    <string name="tutorial_page3">You can also sell your foods </string>
    <string name="tutorial_page4">Save money and enjoy healthy food</string>
</resources>
