<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00545855"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#ffffff">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/titleET"
            android:hint="Title"
            android:background="@android:color/transparent"
            android:textColor="#000000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/addressET"
            android:hint="@string/address"
            android:background="@android:color/transparent"
            android:textColor="#000000" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:id="@+id/buildingnoET"
                android:hint="@string/building_number"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:textColor="#000000" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:id="@+id/apartmentnoET"
                android:hint="@string/apartment_no"
                android:background="@android:color/transparent"
                android:layout_weight="1"
                android:textColor="#000000" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/addressdescriptionET"
            android:hint="@string/address_txt"
            android:background="@android:color/transparent"
            android:textColor="#000000" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/main_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="İptal"
                android:id="@+id/cancelTV"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_marginRight="5dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/save"
                style="@style/main_button"
                android:id="@+id/saveTV"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_marginLeft="5dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>