<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/map"
                    tools:context=".MainActivity"
                    android:name="com.google.android.gms.maps.SupportMapFragment" />
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginBottom="15dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@drawable/infowindow_bg"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_vertical"
                        android:id="@+id/setAddressLL"
                        android:focusableInTouchMode="false">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/set_address"
                            android:id="@+id/textView"
                            android:textColor="#ffffff"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/imageView5"
                        android:src="@drawable/location_pin" />

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="#ffffff">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/editText"
                android:hint="@string/address_title"
                android:background="#ffffff" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/editText2"
                android:hint="@string/address"
                android:background="#ffffff" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:id="@+id/editText3"
                    android:hint="@string/building_number"
                    android:background="#ffffff"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:id="@+id/editText4"
                    android:hint="@string/apartment_no"
                    android:background="#ffffff"
                    android:layout_weight="1" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/editText5"
                android:hint="@string/address_txt"
                android:background="#ffffff" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/save"
                    style="@style/main_button"
                    android:id="@+id/saveTV"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>