<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primary_color"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Götür"
            android:id="@+id/textView6"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ordersIV"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/orders_icon"
            android:padding="13dp" />
    </FrameLayout>

    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:scrollbars="vertical"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="250dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mapContainerLL">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <fragment
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:id="@+id/map"
                    tools:context=".MainActivity"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    class="com.google.android.gms.maps.SupportMapFragment"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/infowindow_bg"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:gravity="center_vertical"
                    android:id="@+id/allAddressLL"
                    android:focusableInTouchMode="false"
                    android:layout_gravity="center_horizontal|bottom"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_addresses"
                        android:id="@+id/allAddressTV"
                        android:textColor="#ffffff"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginBottom="15dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@drawable/infowindow_bg"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_vertical"
                        android:id="@+id/setAddressLL"
                        android:focusableInTouchMode="false">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/set_address"
                            android:id="@+id/addressTV"
                            android:textColor="#ffffff"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/imageView5"
                        android:src="@drawable/location_pin" />

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/noFoodContainerLL"
            android:layout_marginTop="250dp"
            android:background="#ffffff"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_near_place"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textSize="24sp"
                android:gravity="center" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>